<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0a134c"
    android:fitsSystemWindows="true"
    tools:context=".SignUpActivity">

    <!-- Hero Image -->
    <ImageView
        android:id="@+id/heroImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/lier"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/image_description"/>

    <!-- Sign Up Title -->
    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/heroImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Username Input -->
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:background="@drawable/round"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/signupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:inputType="textPersonName"/>

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/fullName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:inputType="textPersonName"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:background="@drawable/round"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp" />

    <!-- Re-enter Password Input -->
    <EditText
        android:id="@+id/rePassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_repassword"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:layout_marginTop="15dp"
        android:background="@drawable/round"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"/>

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_button_text"
        android:textSize="12sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/rePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/round"
        android:textColor="@android:color/black"/>
</androidx.constraintlayout.widget.ConstraintLayout>
